--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "factutrador",
+  "name": "facturador",
   "version": "1.0.0",
-  "main": "main.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "nodemailer": "^7.0.5",
-    "pdfkit": "^0.17.1",
-    "puppeteer": "^24.14.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "nodemailer": "^6.9.13",
+    "pdfkit": "^0.15.0",
+    "puppeteer": "^22.10.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
