--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMAIL_USER="recibosspgt@gmail.com"
-EMAIL_PASS="cqgd pavv grek eluh"
-DATABASE_URL="postgresql://postgres:ferxxoprogramador%2302.%40@localhost:5432/facturador"
+EMAIL_USER="recibospgt@gmail.com"
+EMAIL_PASS="cngd payu grek eiwh"
+DATABASE_URL="postgresql://facturador_user:ferxxoprogramador%2302.%40@localhost:5432/facturador_db"
